--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,11 @@ inputs:
     required: false
     default: "disabled"
 
+  use-postgres:
+    description: 'Configure FerretDB to use PostgreSQL (default "disabled")'
+    required: false
+    default: "false"
+
 runs:
   using: "docker"
   image: "Dockerfile"
@@ -28,3 +33,4 @@ runs:
     - ${{ inputs.ferretdb-version }}
     - ${{ inputs.ferretdb-port }}
     - ${{ inputs.ferretdb-telemetry }}
+    - ${{ inputs.ferretdb-postgres }}
