--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Start FerretDB
         uses: ./
 
@@ -29,7 +29,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Start FerretDB
         uses: ./
         with:
@@ -42,3 +42,24 @@ jobs:
 
       - run: npm install
       - run: PORT=12345 npm test
+
+  postgres-enabled:
+    name: Start FerretDB on custom port
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Start FerretDB
+        uses: ./
+        with:
+          use-postgres: true
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - run: npm install
+      - run: npm test
